# solrunners-site

./: .env  .gitignore  Cargo.toml  docker-compose.yml
.github/workflows/: ci.yml
res/style/: colors.scss  fonts.css  style.css  style.scss  zine.scss
res/style/JetBrainsMono-woff2/: jetbrains.css
res/templates/: about.html  contact.html  index.html  navbar.html  zine.html
res/templates/components/: navbar.html  page_base.html  spinner.html
res/templates/pages/: about.html  error.html  home.html  now.html
src/: error.rs  lib.rs  main.rs  resource.rs  router.rs  scss.rs
src/components/: mod.rs  navbar.rs  page_base.rs  spinner.rs
src/db/: models.rs
src/routes/: error.rs  mod.rs  resource.rs
src/routes/api/: mod.rs  zine.rs
src/routes/page/: mod.rs
src/routes/res/: caching.rs  media.rs  mod.rs  style.rs
src/routes/zine/: mod.rs
src/views/: navbar.rs
templates/: index.html
templates/res/: style.css
