[package]
name = "solrunners-site"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
grass = "0.13.4"
lazy_static = "1.5.0"
rocket = "0.5.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
tera = "1.20.0"
toml = "0.8.19"
walkdir = "2.5.0"

[lib]
doctest = false

[lints.clippy]
missing_panics_doc = "deny"
missing_errors_doc = "deny"
missing_safety_doc = "deny"
unnecessary_safety_doc = "deny"
doc_markdown = "warn"
doc_link_with_quotes = "warn"
missing_docs_in_private_items = "warn"

empty_line_after_doc_comments = "warn"
empty_docs = "deny"            
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"          
unnecessary_safety_comment = "deny"                      
string_lit_chars_any = "deny"
large_include_file = "deny"
mutex_atomic = "deny"            
allow_attributes_without_reason = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
deref_by_slicing = "warn"
if_then_some_else_none = "warn"
non_ascii_literal = "deny"
pathbuf_init_then_push = "deny"
pub_without_shorthand = "deny"
rest_pat_in_fully_bound_structs = "deny"
rc_mutex = "deny"
same_name_method = "warn"
string_to_string = "deny"
create_dir = "deny"
exit = "deny"
filetype_is_file = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "warn"
verbose_file_reads = "warn"

[lints.rust]
missing_docs = "warn"
